<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/actionbar_sample"
        android:src="@drawable/sunny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/imgV2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/imgV3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/actionbar_sample"
        android:src="@drawable/videogame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/imgV4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/eye"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/imgV5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/compat_header_sample"
        android:src="@drawable/adb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/imgV6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/actionbar_sample"
        android:src="@drawable/frames"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/nav_settting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/actionbar_sample"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintWidth_percent="0.13" />

    <ImageView
        android:id="@+id/nav_help"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/actionbar_sample"
        android:src="@drawable/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.3"
        app:layout_constraintWidth_percent="0.13" />

    <TextView
        android:id="@+id/Tv1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/compat_header_sample"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/img1"
        app:layout_constraintTop_toTopOf="@id/img1"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/Tv2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/action_bar_sample"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/imgV2"
        app:layout_constraintTop_toTopOf="@id/imgV2"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/Tv3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/multidrawer_sample"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/imgV3"
        app:layout_constraintTop_toTopOf="@id/imgV3"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/Tv4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingLeft="10sp"
        android:paddingRight="5sp"
        android:text="@string/nontranslucentstatusdrawer_sa"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgV4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/imgV4"
        app:layout_constraintTop_toTopOf="@id/imgV4"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/Tv5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/compat_header_sample"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgV5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/imgV5"
        app:layout_constraintTop_toTopOf="@id/imgV5"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/Tv6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/simplefragment_sample"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgV6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/imgV6"
        app:layout_constraintTop_toTopOf="@id/imgV6"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/nav_settting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/nav_settting"
        app:layout_constraintTop_toTopOf="@id/nav_settting"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/help"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/nav_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/nav_help"
        app:layout_constraintTop_toTopOf="@id/nav_help"
        app:layout_constraintWidth_percent="0.4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80"
        app:layout_constraintWidth_percent="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>